--- a/contato.html
+++ b/contato.html
@@ -5,11 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contato Infinty</title>
+    <link rel="shortcut icon" href="img/Brown Mascot Lion Free Logo (1).png" type="imagens/x-icon" widht="100px">
     <meta name="Infinty" content="Site INFINITY" />
 
     <link rel="stylesheet" href="estilo.css" />
 
   </head>
+  
+  <header class="header">
+    
+    <h1><img src="img/Brown Mascot Lion Free Logo (1).png" width="150px" alt=""  ></h1>
+    <nav>
+      <ul>
+        <div class="barra"></div>
+        <div style="text-align:justify;"></div>
+        
+        <li class="li"> <a href="index.html">Início</a></li>
+        <li class="li"> <a href="colecao.html">Coleções</a></li>
+        <li class="li"> <a href="contato.html">Contato</a></li>
+        <li class="li"> <a href="quemsomos.html">Sobre nós</a></li>
+      </div>
+      </ul>
+    </nav>
+  </header>
   <body>
 
             </div>
@@ -70,8 +88,8 @@
     </section>
 
 
-        <div class="main-footer__lower">
-          &copy; Copyright 2023. INFINITY
+        <div class="main-footer__lowerf">
+          @ Copyright 2023. INFINITY
 
         </div>
       </div>
