--- a/quemsomos.html
+++ b/quemsomos.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="shortcut icon" href="img - Copia/infinty - logo.png" type="imagens/x-icon" widht="100px">
+    <link rel="shortcut icon" href="img/Brown Mascot Lion Free Logo (1).png" type="imagens/x-icon" widht="100px">
     <title>Infinity</title>
     <link rel="stylesheet" href="estilo.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="otavio.css"></link>
+  
   </head>
   <body>
 
     <header class="header">
     
-      <h1><img src="img/infinty - logo.png" width="150px" alt=""  ></h1>
+      <h1><img src="img/Brown Mascot Lion Free Logo (1).png" width="150px" alt=""  ></h1>
       <nav>
         <ul>
           <div class="barra"></div>
@@ -37,7 +37,7 @@
             <ul class="ul-social">
           
             <li class="li-social-links">
-              <a class="social" href="https://www.instagram.com/ferreirxw" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a class="social" href="https://www.instagram.com/infinity_fornecedora" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </li>
           </ul>
         </div>
